[project]
name = "keysightosc"
description = "Interface for Keysight Oscilloscopes."
dynamic = ["version"]
readme = "README.md"
authors = [
    {name = "Leander Claes", email = "claes@emt.uni-paderborn.de"},
]
requires-python = ">=3"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyvisa",
    "numpy",
    "pyvisa-py; sys_platform=='linux'",
    "pyusb; sys_platform=='linux'",
]

[project.optional-dependencies]
doc = [
    "setuptools_scm",
    "sphinx",
    "sphinx-rtd-theme",
]
test = [
    "pytest",
]

[project.urls]
homepage = "https://emt.uni-paderborn.de"
source = "https://github.com/emtpb/keysightosc"
tracker = "https://github.com/emtpb/keysightosc/issues"

[build-system]
requires = ["setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]
